--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,7 @@ $layers: 6;
 $treeCount: 20;
 
 //Masonry
-$gutter: 2rem;
-$masonrySize: 20rem;
+$gutter: 1rem;
+$masonrySize: 10rem;
 $maxColumns: 4;
-$titleFontSize: 2.5rem;
+$titleFontSize: 1.25rem;
